== Changelog ==
== 1.7.3.7 ==
1. Create ajax for single send email on tabular and horizontal View
2.Create validation rule on form input fields jquery
3.Create wp_ajax hook action to update quotes entries


== 1.7.3.6 ==
1.Create wcp-single-email.php file 
2.Add script function when success sending sanitize_email
3.Create media queries for request forms
4.Added style for single quotes email
6.Added Js to get post id and use to get email of current wcp data
7.Added ndf_data_enable_request_form_meta_box to ndf_data post type and included in more information section groups
8.Added function on ndf_utility_functions.php for the single request email form


= 1.7.3.5 =
1.Added field_group table ndf_saved_fields table on the database
2.Created Field Groups tab on the More Info Page Section.
3.Created 3 section as maximum number of anchored tabs 
4.Created template directory inside include folder
5.Created secttion1.php,section2.php and section3.php template part for the selected section of the field inside template directory
6.Created option to change and to add field groups on Add More Fields section 
7.Created anchored tab navigation on page and modal more info 
8.Created 2 columns for each field rows.
9.Seperate field section 
10.Don't display field if no value.
11.Fix mobile responsive

== 1.7.3.4 ==
1.Added field_group Column in ndf_saved_fields_data table using
2.Created Section 1, Section 2 and Section 3 field groups


= 1.7.3.3 =
Quotes Form Settings Field
1.Change form background color
2.Change text color
3.Edit form title
4.Added setting for form title alignment
5.Added settings for title font size
6.Added settings for title line height
7.Added settings for title font weight
8.Added settings to change form subtitle
9.Added settings for content alignment
10.Added setting to change input field width
11.Added settings to change button text
12.Added settings to change button Color
13.Added settings to change button width
14.Option to show and hide shortcode
