@@ -19,10 +19,10 @@
  * @author 		Netseek Pty Ltd
  */
 function ndf_enqueue(){
-	// wp_deregister_script( 'jquery' );
+	wp_deregister_script( 'jquery' );
     // // Change the URL if you want to load a local copy of jQuery from your own server.
-    // wp_register_script( 'jquery', "http://code.jquery.com/jquery-1.12.4.js", array(), '3.3.2' );
-    // wp_register_script( 'jquery', "http://code.jquery.com/jquery-migrate-1.4.1.js", array(), '3.3.2' );
+    wp_register_script( 'jquery', "http://code.jquery.com/jquery-1.12.4.js", array(), '3.3.2' );
+    wp_register_script( 'jquery', "http://code.jquery.com/jquery-migrate-1.4.1.js", array(), '3.3.2' );
 	// // this loaded on plugin only
 	wp_register_style( 'ndf-uikit-tooltip-style',  NDF_BASE_URL . '/vendor/uikit/css/components/tooltip.min.css', array(), '2.27.2', 'all' );
 	wp_enqueue_style( 'ndf-uikit-tooltip-style' );
