@@ -3,7 +3,9 @@
 1. Create ajax for single send email on tabular and horizontal View
 2.Create validation rule on form input fields jquery
 3.Create wp_ajax hook action to update quotes entries
-
+4.Added ajax loader image on jquery forms
+5.Register wp_localize_script to register image directory
+6.Change .prop to .attr on filter table for returning selected/checked category
 
 == 1.7.3.6 ==
 1.Create wcp-single-email.php file 
